--- a/.github/workflows/laravel-tests.yml
+++ b/.github/workflows/laravel-tests.yml
@@ -10,33 +10,36 @@ jobs:
   laravel-tests:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: ./codificacao/hospital/Hospital 
+
     steps:
-    # 1. Baixa o código
+    # 1. Baixa o código (O checkout sempre roda na raiz primeiro, isso é normal)
     - name: Checkout do código
       uses: actions/checkout@v4
 
-    # 2. (NOVO) Passo de Debug para ver a estrutura de pastas
-    # Se der erro, olhe o log deste passo para ver onde o composer.json está
+    # 2. Debug para garantir que estamos na pasta certa
     - name: Listar arquivos (Debug)
       run: |
-        echo "=== LISTANDO DIRETÓRIO ATUAL ==="
+        echo "=== ONDE ESTOU AGORA? ==="
         pwd
+        echo "=== O QUE TEM AQUI? ==="
         ls -la
-        echo "=== LISTANDO SUBDIRETÓRIOS ==="
-        ls -R
+        # Se aparecer o artisan e o composer.json aqui, DEU CERTO.
 
-    # 3. Prepara o PHP (CORRIGIDO: adicionei zip, unzip e pdo_sqlite)
+    # 3. Setup PHP
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '8.2' 
+        php-version: '8.2'
         extensions: mbstring, dom, fileinfo, sqlite3, zip, unzip, pdo, pdo_sqlite, curl
 
     # 4. Copia o .env
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
 
-    # 5. Instala dependências (CORRIGIDO: removido -q para ver erros)
+    # 5. Instala dependências
     - name: Install Dependencies
       run: composer install --no-ansi --no-interaction --no-scripts --prefer-dist
 
@@ -47,8 +50,9 @@ jobs:
     # 7. Cria o banco SQLite
     - name: Create Database
       run: |
+        # Como já definimos o working-directory, o 'database/' é relativo à pasta do Laravel
         touch database/database.sqlite
-        
+      
     # 8. Roda os testes
     - name: Execute tests
       env:
