Set working directory for Laravel tests
Add defaults for running tests in a specific directory.

--- a/.github/workflows/laravel-tests.yml
+++ b/.github/workflows/laravel-tests.yml
@@ -5,7 +5,10 @@ on:
     branches: [ "main", "master" ]
   pull_request:
     branches: [ "main", "master" ]
-
+    
+defaults:
+      run:
+        working-directory: codificacao
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
