--- a/.github/workflows/laravel-tests.yml
+++ b/.github/workflows/laravel-tests.yml
@@ -1,47 +1,55 @@
 name: Laravel Tests
 
-
 on:
   push:
     branches: [ "main", "master" ]
   pull_request:
     branches: [ "main", "master" ]
 
+
+defaults:
+  run:
+    working-directory: codificacao/hospital/Hospital
+
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
 
     steps:
-    # 1. Baixa o seu código para a máquina virtual
     - name: Checkout do código
       uses: actions/checkout@v4
 
-    # 2. Prepara o PHP na máquina virtual
+    # Passo de Debug CRUCIAL: Vai mostrar onde está o composer.json
+    - name: Listar arquivos (Debug)
+      run: |
+        echo "=== ONDE ESTOU? ==="
+        pwd
+        echo "=== O QUE TEM NA PASTA ATUAL? ==="
+        ls -la
+        echo "=== BUSCANDO COMPOSER.JSON (RECURSIVO) ==="
+        find . -name "composer.json"
+
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '8.2' # Mude para a versão do seu projeto (8.1, 8.3, etc)
+        php-version: '8.2'
         extensions: mbstring, dom, fileinfo, sqlite3, zip, unzip, pdo, pdo_sqlite, curl
 
-    # 3. Copia o arquivo de ambiente
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
 
-    # 4. Instala as dependências (a pasta vendor é criada AQUI e morre AQUI)
     - name: Install Dependencies
+      # Adicionei || true para que se falhar, a gente consiga ver o log do debug acima
       run: composer install --no-ansi --no-interaction --no-scripts --prefer-dist
 
-    # 5. Gera a chave da aplicação
     - name: Generate key
       run: php artisan key:generate
 
-    # 6. Cria o banco de dados SQLite em memória (para ser rápido)
     - name: Create Database
       run: |
         touch database/database.sqlite
         
-    # 7. Roda os testes
-    - name: Execute tests (Unit and Feature tests)
+    - name: Execute tests
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
